--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<header id="header">
 						<h1><a href="index.html">ICRA LHMP 2023</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
@@ -39,192 +39,140 @@
 						</div>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><img width="100px" src="images/lhmp-icon-2021.svg" alt=""></span></div>
-							<h2>5th Workshop on </br>
-								Long-term Human Motion Prediction</h2>
-							<p>2023 IEEE International Conference on Robotics and Automation (<a href="https://www.icra2023.org">ICRA 2023</a>) </br>
-							29 May 2023, London, UK</p>
-						</div>
-					</section>
-
 				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/lhmp-spencer-2.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Social and predictive navigation</h2>
-										<p>Service robots should predict human motion for safe and efficient operation.</p>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/lhmp-jim.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Collaborative and production robots</h2>
-										<p>Working and co-manipulating in close proximity to humans requires precise full-body motion, task and activity anticipation.</p>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/lhmp-shared.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Automated driving</h2>
-										<p>Urban and highway navigation is impossible without fast inference on the dynamic enviroment.</p>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style2">
-								<div class="inner">
-									<h2 class="major">Mission of the workshop</h2>
-									<p>Anticipating human motion is a key skill for intelligent systems that share a space or interact with humans. Accurate long-term predictions of human movement trajectories, body poses, actions or activities may significantly improve the ability of robots to plan ahead, anticipate the effects of their actions or to foresee hazardous situations. The topic has received increasing attention in recent years across several scientific communities with a growing spectrum of applications in service robots, self-driving cars, collaborative manipulators or tracking and surveillance.</p>
-
-									<p>This workshop is the fifth in a series of ICRA 2019-2023 events. The aim of this workshop is to bring together researchers and practitioners from different communities and to discuss recent developments in this field, promising approaches, their limitations, benchmarking techniques and open challenges.</p>
-								</div>
-							</section>
-
-
-					<!-- Four -->
-					<section id="four" class="wrapper style3">
+				<section id="wrapper">
+					<header>
 						<div class="inner">
-							<h2 class="major">Highlights</h2>
-							<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring workshop proceedings.		</p>							
-							<section class="features">
-								<article>
-									<h3 class="major">Program</h3>
-									<p>Preliminary program of the full-day workshop is available.</p>
-									<a href="program.html" class="special">Learn more</a>
-								</article>
-								<article>
-									<h3 class="major">Participation</h3>
-									<p>Registration and online participation details will be announced soon.</p>
-									<a href="#" class="special">Learn more</a>
-								</article>
-								<article>
-									<h3 class="major">Call for papers</h3>
-									<p>We encourage researchers submit their novel material in short (up to 4 pages) papers to be presented as posters.</p>
-									<a href="call-for-papers.html" class="special">Learn more</a>
-								</article>
-								<article>
-									<h3 class="major">YouTube channel</h3>
-									<p>Recordings of the past LHMP events are available at our YouTube channel.</p>
-									<a href="https://www.youtube.com/@motionprediction8071" class="special">Learn more</a>
-								</article>
-							</section>
-							<ul class="actions">
-								<li><a href="past-events.html" class="button">Past events</a></li>
-							</ul>
+							<h2>Long-term Human Motion Prediction Workshop</h2>
+							<p>Program</p>
 						</div>
-					</section>
+					</header>
 
-					</section>	
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style4">
-								<div class="inner">
-									<h2 class="major">Organizers</h2>
-									<div class="box alt">
-										<div class="row gtr-uniform">
-											<div class="col-2">
-												<span class="image fit"><img src="images/Organizers/luigi-palmieri.jpg"
-														alt="" /></span>
-												<p><a href="https://palmieri.github.io/"><strong>Luigi Palmieri</strong>,</br> Robert Bosch
-														GmbH</a></p>
-											</div>
-											<div class="col-2">
-												<span class="image fit"><img src="images/Organizers/Andrey_Rudenko-2.jpeg" alt="" /></span>
-												<p> <a href="https://rudenkoandrey.github.io"><strong>Andrey Rudenko</strong>,</br>
-														Robert Bosch GmbH</a></p>
-											</div>
-											<div class="col-2">
-												<span class="image fit"><img src="images/Organizers/boris_ivanovic.jpg" alt="" /></span>
-												<p> <a href="https://www.borisivanovic.com"><strong>Boris
-															Ivanovic</strong>,</br> NVIDIA</a></p>
-											</div>
-											<div class="col-2">
-												<span class="image fit"><img src="images/Organizers/Alexandre_Alahi.jpg" alt="" /></span>
-												<p> <a href="https://people.epfl.ch/alexandre.alahi?lang=en"><strong>Alexandre
-															Alahi</strong>,</br> EPFL</a></p>
-											</div>
-											<div class="col-2">
-												<span class="image fit"><img src="images/Organizers/Jiachen_li.jpg" alt="" /></span>
-												<p> <a href="https://jiachenli94.github.io"><strong>Jiachen Li</strong>,</br> Stanford University</a></p>
-											</div>
-											<div class="col-2">
-												<span class="image fit"><img
-														src="images/Organizers/kai-oliver-arras-contact-4x3_res_540x405.jpg"
-														alt="" /></span>
-												<p> <a href="https://www.bosch.com/research/know-how/research-experts/dr-kai-oliver-arras/"><strong>Kai
-															O. Arras</strong>,</br> University of Stuttgart</a></p>
-											</div>
-											<div class="col-2">
-												<span class="image fit"><img src="images/Organizers/achim_lilienthal.jpg" alt="" /></span>
-												<p> <a href="http://mro.oru.se/people/achim-lilienthal/"><strong>Achim J.
-															Lilienthal</strong>,</br> TU Munich</a></p>
-											</div>
-										</div>
+					<!-- Content -->
+					<div class="wrapper">
+						<div class="inner">
+								<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring the workshop proceedings.		</p>							
+									<div class="table-wrapper">
+										<table>
+											<thead>
+												<tr>
+													<th>Time</th>
+													<th>Speaker</th>
+													<th>Topic</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr onClick='toggleRow(this)'>
+													<td>9:00 - 9:15 BST</td>
+													<td>Organizers</td>
+													<td>Welcome and Introduction</td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>9:15 - 9:45 BST</td>
+													<td><strong><a href="http://www.lambertoballan.net/">Lamberto Ballan</a></strong>, University of Padova</td>
+													<td>Distilling Knowledge for Short-to-Long Term Trajectory Prediction</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>In this talk I will present our ongoing work on knowledge distillation for short-to-long term trajectory forecasting. Our approach involves training a student network to solve the long-term trajectory forecasting problem, whereas the teacher network from which the knowledge is distilled has a longer observation, and solves a short-term trajectory prediction problem by regularizing the student's predictions. Specifically, we use a teacher model to generate plausible trajectories for a shorter time horizon, and then distill the knowledge from the teacher model to a student model that solves the problem for a much higher time horizon. Our experiments show that the proposed model is beneficial for long-term forecasting, and our model achieves state-of-the-art performance on the Intersection Drone Dataset (inD) and the Stanford Drone Dataset (SDD).</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>9:45 - 10:15 BST</td>
+													<td><strong><a href="http://www.alonsomora.com/">Javier Alonso-Mora, Gang Chen</a></strong>, TU Delft</td>
+													<td>Particle-based Dynamic Environment Representation and Prediction for Obstacle Avoidance </td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>The design of effective motion prediction methods for dynamic objects relies heavily on the representation of the surrounding environment. Traditional approaches often employ a separated representation paradigm, utilizing static maps for modeling static objects and detecting and tracking dynamic objects separately. However, such paradigm faces certain challenges in practical applications, including trail noise in static maps and false association in multiple object tracking. In this talk, we propose a particle-based environment representation that addresses these limitations. Our representation employs particles with velocities to model both static and dynamic objects simultaneously, resulting in an ego-centric continuous occupancy map known as the Dual-structural Particle-based (DSP) map. This representation not only enhances the performance of occupancy estimation in the current time, but also enables map-wise predictions of future occupancy status. Leveraging these predictions, we propose two risk-aware motion planners to realize safe navigation in dynamic environments with pedestrians.</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>10:15 - 10:30 BST</td>
+													<td><strong><a href="https://scholar.google.com/citations?user=fYCdRUwAAAAJ&hl=en">Tim Schreiter</a></strong>, University of Örebro</td>
+													<td>Title</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>10:30 - 10:45 BST</td>
+													<td><strong><a href="https://www.linkedin.com/in/faris-janjos/?originalSubdomain=de">Faris Janjos</a></strong>, Bosch</td>
+													<td>Unscented Autoencoder and its Application in Trajectory Prediction</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>10:45 - 11:15 BST</td>
+													<td>Coffee break</td>
+													<td></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>11:15 - 11:45 BST</td>
+													<td><strong><a href="https://www.santannapisa.it/en/egidio-falotico">Egidio Falotico</a></strong>, Sant'Anna School of Advanced Studies</td>
+													<td>Title</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>11:45 - 12:15 BST</td>
+													<td><strong><a href="https://gchal.github.io/">Georgia Chalvatzaki</a></strong>, TU Darmstadt</td>
+													<td>Human-centered Robot Learning for Intelligent Assistance</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>12:15 - 13:30 BST</td>
+													<td>Lunch break</td>
+													<td></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>13:30 - 14:30 BST</td>
+													<td>Poster session</td>
+													<td></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>14:30 - 15:00 BST</td>
+													<td><strong><a href="https://www.iit.it/it/people-details/-/people/agnieszka-wykowska">Agnieszka Wykowska</a></strong>, Italian Institute of Technology</td>
+													<td>Title</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>15:00 - 15:30 BST</td>
+													<td><strong><a href="https://www.autonomousagents.stanford.edu/">Nick Haber</a></strong>, Stanford</td>
+													<td>Trajectory prediction, social understanding, and curiosity</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>15:30 - 15:45 BST</td>
+													<td>Coffee break</td>
+													<td></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>15:45 - 16:15 BST</td>
+													<td><strong><a href="https://uk.linkedin.com/in/anthony-knittel-30b180204">Anthony Knittel</a></strong>, Five AI</td>
+													<td>Applied challenges of prediction for supporting an autonomous vehicle</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>Prediction is typically studied independently on datasets, while additional challenges occur when connecting prediction as part of a larger system.  We examine the use of prediction as part of a connected system along with planning and perception, in the context of supporting the Five autonomous vehicle.</a></td>
+												</tr>
+												<tr onClick='toggleRow(this)'>
+													<td>16:15 - 16:45 BST</td>
+													<td><strong><a href="https://research.nvidia.com/person/yuxiao-chen">Yuxiao Chen</a></strong>, NVIDIA</td>
+													<td>How to plan with prediction: a policy planning perspective</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>In a typical autonomous vehicle (AV) stack, motion predictions are consumed by the planning module to generate safe and efficient motion plan for the AV. While deep learning took the field of prediction by storm and kept improving the SOTA of prediction accuracy, it is unclear how they are helping the subsequent motion plan. This talk focuses on how prediction models are used together with the downstream planning module and showed that one key factor to improving the closed-loop performance is via policy planning, that is, planning a motion policy instead of a single trajectory. Our recent works use prediction models to generate scenario trees and then plan tree-structured motion policies capable of reacting to the environment behavior. Thanks to the reactiveness, we showed that policy planning significantly outperforms the traditional benchmarks in closed-loop simulation. As expected, the increased complexity leads to higher computational cost, and we will discuss the limitations of policy planning in the talk as well.</a></td>
+												</tr>
+												<tr>
+													<td>16:45 - 17:00 BST</td>
+													<td>Organizers</td>
+													<td>Discussion and conclusions</td>
+												</tr>
+											</tbody>
+										</table>
 									</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four" class="wrapper style5">
-								<div class="inner">
-									<h2 class="major">In cooperation with</h2>
-
-									<div class="box alt">
-										<div class="row gtr-uniform">
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px" src="images/Affiliations/tum-logo.gif"
-														alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
-														src="images/Affiliations/Oru_logo.png" alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
-												src="images/Affiliations/university-of-stuttgart-logo-white.png" alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px" src="images/Affiliations/epfl-logo.png"
-														alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
-														src="images/Affiliations/stanford-logo-dark.png" alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px" src="images/Affiliations/bosch-Logo-dark.png"
-												alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px" src="images/Affiliations/Nvidia-White-Horizontal-Logo.wine.png"
-												alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
-												src="images/Affiliations/retenua-logo-dark.png" alt="" /></span></div>
-											<div class="col-2"><span class="image fit"><img style="border-radius:2px"
-												src="images/Affiliations/darko-logo-dark.png" alt="" /></span></div>
-										</div>
-									</div>
-								</div>
-							</section>
-
+							</div>
+						</header>
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<section>
-								<h2 class="major">Get in touch</h2>
-								<p>Please feel free to send us an <a href="mailto:Andrey.Rudenko@de.bosch.com?Subject=Workshop%20LHMP"
-									target="_top">e-mail</a> , if you have a question regarding this workshop.</p>
-							</section>
+				<section id="footer">
+					<div class="inner">
+						<section>
+							<h2 class="major">Get in touch</h2>
+							<p>Please feel free to send us an <a href="mailto:Andrey.Rudenko@de.bosch.com?Subject=Workshop%20LHMP"
+								target="_top">e-mail</a> , if you have any questions regarding this workshop.</p>
+						</section>
 
-							<ul class="copyright">
-								<li>&copy; Andrey Rudenko and Luigi Palmieri. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+						<ul class="copyright">
+							<li>&copy; Andrey Rudenko and Luigi Palmieri. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</section>
 
 			</div>
 
@@ -235,6 +183,14 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+
+			<script>
+				const toggleRow = (element) => {
+				  element.getElementsByClassName('expanded-row-content')[0].classList.toggle('hide-row');
+				  console.log(event);
+				}
+			  </script>
 
 	</body>
 </html>
