--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -120,52 +120,63 @@
 				<section id="four" class="wrapper alt style2">
 					<div class="inner">
 						<h2 class="major">Workshop proceedings</h2>
-						<div class="table-wrapper-2">
+						<div class="table-wrapper">
 							<table>
 								<thead>
 									<tr>
+										<th>Number</th>
 										<th>Authors</th>
 										<th>Title</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
+										<td>1</td>
 										<td>Nils Mandischer (RWTH Aachen University); Frederik Schicks (RWTH Aachen University); Burkhard Corves (IGMR, RWTH Aachen University)</td>
 										<td>Situational Adaptive Motion Prediction for Firefighting Squads in Indoor Search and Rescue</td>
 									</tr>
 									<tr>
+										<td>2</td>
 										<td>Anna Mészáros (Delft University of Technology); Javier Alonso-Mora (Delft University of Technology); Jens Kober (TU Delft)</td>
 										<td>TrajFlow: Learning the Distribution over Trajectories</td>
 									</tr>
 									<tr>
+										<td>3</td>
 										<td>Mincheul Kim (Korea Advanced Institute of Science and Technology (KAIST)); Youngsun Kwon (Electronics and Telecommunications Research Institute (ETRI)); Sebin Lee (KAIST); Sungeui Yoon (KAIST)</td>
 										<td>A Combined Approach to Mobile Robot Navigation Using CCTV</td>
 									</tr>
 									<tr>
+										<td>4</td>
 										<td>Oliver Urbann (Fraunhofer IML); Oliver Bredtmann (DB Schenker); Maximilian Otten (Fraunhofer IML); Jan-Philip Richter (Fraunhofer IML); Thilo Bauer (DB Schenker); David Zibriczky (DB Schenker)</td>
 										<td>Online and Real-Time Tracking in a Surveillance Scenario</td>
 									</tr>
 									<tr>
+										<td>5</td>
 										<td>Tim Salzmann (Technical University of Munich); Lewis Chiang; Markus Ryll (Technical University of Munich); Dorsa Sadigh (Stanford); Carolina Parada (Google); Alex Bewley (Google)</td>
 										<td>Human Scene Transformer</td>
 									</tr>
 									<tr>
+										<td>6</td>
 										<td>Divya Thuremella (University of Oxford); Lars Kunze (University of Oxford)</td>
 										<td>Long-Tailed Trajectory Prediction</td>
 									</tr>
 									<tr>
+										<td>7</td>
 										<td>Sander Tonkens (University of California San Diego); Sophia H Sun (University of California, San Diego); Rose Yu (University of California, San Diego); Sylvia Herbert (University of California San Diego)</td>
 										<td>Scalable Safe Long-Horizon Planning in Dynamic Environments Leveraging Conformal Prediction and Temporal Correlations </td>
 									</tr>
 									<tr>
+										<td>8</td>
 										<td>Tomas Vintr (Faculty of Electrical Engineering, Czech Technical University in Prague)</td>
 										<td>Dataset Collection for Long-term Forecasting of Human Presence, Motion and Activity</td>
 									</tr>
 									<tr>
+										<td>9</td>
 										<td>Anthony Knittel (FiveAI); Morris Antonello (FiveAI); John Redford (Five AI Ltd.); Subramanian Ramamoorthy (FiveAI Ltd.)</td>
 										<td>Comparison of Pedestrian Prediction Models from Trajectory and Appearance Data for Autonomous Driving</td>
 									</tr>
 									<tr>
+										<td>10</td>
 										<td>Yufei Zhu (Örebro University); Andrey Rudenko (Bosch Corporate Research); Tomasz Piotr Kucner (Aalto University); Achim Lilienthal (Orebro University); Martin Magnusson (Orebro University)</td>
 										<td>A Data-Efficient Approach for Long-Term Human Motion Prediction Using Maps of Dynamics</td>
 									</tr>
