--- a/program.html
+++ b/program.html
@@ -51,7 +51,7 @@
 					<!-- Content -->
 					<div class="wrapper">
 						<div class="inner">
-								<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds, spotlight talks for selected conference papers, and a poster session featuring workshop proceedings.		</p>							
+								<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring the workshop proceedings.		</p>							
 									<div class="table-wrapper">
 										<table>
 											<thead>
@@ -70,51 +70,46 @@
 												<tr onClick='toggleRow(this)'>
 													<td>9:15 - 9:45 BST</td>
 													<td><strong><a href="http://www.lambertoballan.net/">Lamberto Ballan</a></strong>, University of Padova</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td>Distilling Knowledge for Short-to-Long Term Trajectory Prediction</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>In this talk I will present our ongoing work on knowledge distillation for short-to-long term trajectory forecasting. Our approach involves training a student network to solve the long-term trajectory forecasting problem, whereas the teacher network from which the knowledge is distilled has a longer observation, and solves a short-term trajectory prediction problem by regularizing the student's predictions. Specifically, we use a teacher model to generate plausible trajectories for a shorter time horizon, and then distill the knowledge from the teacher model to a student model that solves the problem for a much higher time horizon. Our experiments show that the proposed model is beneficial for long-term forecasting, and our model achieves state-of-the-art performance on the Intersection Drone Dataset (inD) and the Stanford Drone Dataset (SDD).</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>9:45 - 10:15 BST</td>
 													<td><strong><a href="http://www.alonsomora.com/">Javier Alonso-Mora, Gang Chen</a></strong>, TU Delft</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td>Particle-based Dynamic Environment Representation and Prediction for Obstacle Avoidance </td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>The design of effective motion prediction methods for dynamic objects relies heavily on the representation of the surrounding environment. Traditional approaches often employ a separated representation paradigm, utilizing static maps for modeling static objects and detecting and tracking dynamic objects separately. However, such paradigm faces certain challenges in practical applications, including trail noise in static maps and false association in multiple object tracking. In this talk, we propose a particle-based environment representation that addresses these limitations. Our representation employs particles with velocities to model both static and dynamic objects simultaneously, resulting in an ego-centric continuous occupancy map known as the Dual-structural Particle-based (DSP) map. This representation not only enhances the performance of occupancy estimation in the current time, but also enables map-wise predictions of future occupancy status. Leveraging these predictions, we propose two risk-aware motion planners to realize safe navigation in dynamic environments with pedestrians.</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>10:15 - 10:30 BST</td>
 													<td><strong><a href="https://scholar.google.com/citations?user=fYCdRUwAAAAJ&hl=en">Tim Schreiter</a></strong>, University of Örebro</td>
 													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>10:30 - 10:45 BST</td>
 													<td><strong><a href="https://www.linkedin.com/in/faris-janjos/?originalSubdomain=de">Faris Janjos</a></strong>, Bosch</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td>Unscented Autoencoder and its Application in Trajectory Prediction</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>10:30 - 10:45 BST</td>
+													<td>10:45 - 11:15 BST</td>
 													<td>Coffee break</td>
 													<td></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>11:00 - 11:30 BST</td>
+													<td>11:15 - 11:45 BST</td>
 													<td><strong><a href="https://www.santannapisa.it/en/egidio-falotico">Egidio Falotico</a></strong>, Sant'Anna School of Advanced Studies</td>
 													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>11:30 - 12:00 BST</td>
+													<td>11:45 - 12:15 BST</td>
 													<td><strong><a href="https://gchal.github.io/">Georgia Chalvatzaki</a></strong>, TU Darmstadt</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td>Human-centered Robot Learning for Intelligent Assistance</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
-													<td>12:00 - 12:30 BST</td>
-													<td>Spotlight talks</td>
-													<td></td>
-												</tr>
-												<tr onClick='toggleRow(this)'>
-													<td>12:30 - 13:30 BST</td>
+													<td>12:15 - 13:30 BST</td>
 													<td>Lunch break</td>
 													<td></td>
 												</tr>
@@ -127,13 +122,13 @@
 													<td>14:30 - 15:00 BST</td>
 													<td><strong><a href="https://www.iit.it/it/people-details/-/people/agnieszka-wykowska">Agnieszka Wykowska</a></strong>, Italian Institute of Technology</td>
 													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>15:00 - 15:30 BST</td>
 													<td><strong><a href="https://www.autonomousagents.stanford.edu/">Nick Haber</a></strong>, Stanford</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td>Trajectory prediction, social understanding, and curiosity</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>15:30 - 15:45 BST</td>
@@ -143,14 +138,14 @@
 												<tr onClick='toggleRow(this)'>
 													<td>15:45 - 16:15 BST</td>
 													<td><strong><a href="https://uk.linkedin.com/in/anthony-knittel-30b180204">Anthony Knittel</a></strong>, Five AI</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td>Applied challenges of prediction for supporting an autonomous vehicle</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>Prediction is typically studied independently on datasets, while additional challenges occur when connecting prediction as part of a larger system.  We examine the use of prediction as part of a connected system along with planning and perception, in the context of supporting the Five autonomous vehicle.</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>16:15 - 16:45 BST</td>
 													<td><strong><a href="https://research.nvidia.com/person/yuxiao-chen">Yuxiao Chen</a></strong>, NVIDIA</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'>Abstract: tbd</td>
+													<td>How to plan with prediction: a policy planning perspective</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>In a typical autonomous vehicle (AV) stack, motion predictions are consumed by the planning module to generate safe and efficient motion plan for the AV. While deep learning took the field of prediction by storm and kept improving the SOTA of prediction accuracy, it is unclear how they are helping the subsequent motion plan. This talk focuses on how prediction models are used together with the downstream planning module and showed that one key factor to improving the closed-loop performance is via policy planning, that is, planning a motion policy instead of a single trajectory. Our recent works use prediction models to generate scenario trees and then plan tree-structured motion policies capable of reacting to the environment behavior. Thanks to the reactiveness, we showed that policy planning significantly outperforms the traditional benchmarks in closed-loop simulation. As expected, the increased complexity leads to higher computational cost, and we will discuss the limitations of policy planning in the talk as well.</a></td>
 												</tr>
 												<tr>
 													<td>16:45 - 17:00 BST</td>
