--- a/program.html
+++ b/program.html
@@ -99,8 +99,11 @@
 												<tr onClick='toggleRow(this)'>
 													<td>11:15 - 11:45 BST</td>
 													<td><strong><a href="https://www.santannapisa.it/en/egidio-falotico">Egidio Falotico</a></strong>, Sant'Anna School of Advanced Studies</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+													<td>Inferring human intentions by predicting motions: the case of robot to human handover</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>Handover tasks between humans and robots are a common interaction scenario in many industrial and household settings. However, ensuring a smooth and natural handover requires the robot to accurately predict the human's movements and intentions, including the release point of the object being handed over. 
+														In this talk we present learning-based methods used to predict human motion and evaluate the engagement of the partner. Our approach is based on a deep neural network architecture that is trained on a large dataset of human hand trajectories and release points collected during handover tasks. 
+														To evaluate the effectiveness of our approach, we conducted a series of experiments in which a robot interacted with human participants in handover tasks. Our results show that our approach can accurately predict both the trajectory of the recipient's hand and their intentions and release point, enabling the robot to adjust its movements in real time and ensure a smooth and effective interaction. 
+														Overall, our adaptive approach improves efficiency, safety, and the overall quality of human-robot interactions. </a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>11:45 - 12:15 BST</td>
