--- a/program.html
+++ b/program.html
@@ -82,8 +82,8 @@
 												<tr onClick='toggleRow(this)'>
 													<td>10:15 - 10:30 BST</td>
 													<td><strong><a href="https://scholar.google.com/citations?user=fYCdRUwAAAAJ&hl=en">Tim Schreiter</a></strong>, University of Örebro</td>
-													<td>Title</td>
-													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+													<td>THÖR-Magni: a new multi-modal context-rich dataset of human-robot motion</td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>Social navigation is a challenging task for robots that are required to share the environment with people. Robots must model, interpret, and predict human motion and behavior, and interact and cooperate with humans in a natural and intuitive way to navigate safely and efficiently. However, existing human motion data sets are often limited in terms of tracking quality, realism, diversity, and semantic richness. This talk introduces THÖR-Magni, a novel large-scale human motion modeling and prediction dataset for social scenarios. The THÖR-Magni dataset builds on the previous THÖR dataset, which provides high-quality tracking data from motion capture, gaze trackers, and on-board robot sensors in a semantically rich environment. The THÖR-Magni dataset is an extension of THÖR with a stronger focus on sensor multi-modality, such as mobile LiDAR data and eye-tracking data being aligned with the motion data, as well as more diverse interaction scenarios, such as human-robot collaboration and guidance. The talk will also demonstrate a dashboard that allows users to do a first exploration of the data online without the need to download the data or write code.</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>10:30 - 10:45 BST</td>
