--- a/program.html
+++ b/program.html
@@ -125,7 +125,7 @@
 													<td>14:30 - 15:00 BST</td>
 													<td><strong><a href="https://www.iit.it/it/people-details/-/people/agnieszka-wykowska">Agnieszka Wykowska</a></strong>, Italian Institute of Technology</td>
 													<td>Sensitivity to social signals as a way to navigate social environment</td>
-													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>tbd</a></td>
+													<td class='expanded-row-content hide-row'><strong>Abstract:</strong> <a>In daily lives, we need to predict and understand others’ behaviour in order to efficiently navigate through our social environment. When making predictions about what others are going to do next, we refer to their mental states, such as goals or intentions, and we are sensitive to various subtle nonverbal social cues that others display (e.g., gaze patterns). In this talk, I will present work from our lab in which we examine social signals (e.g., gaze direction, mutual gaze, means-to-goal action efficiency) in human-robot interaction. The focus of our work is on how the human brain processes such social signals. The results of our studies will be discussed in the context of design principles for social robots.</a></td>
 												</tr>
 												<tr onClick='toggleRow(this)'>
 													<td>15:00 - 15:30 BST</td>
