--- a/program.html
+++ b/program.html
@@ -51,7 +51,8 @@
 					<!-- Content -->
 					<div class="wrapper">
 						<div class="inner">
-								<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring the workshop proceedings.		</p>							
+								<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring the workshop proceedings.		</p>
+								<p>Click on the title to see the abstract of the talk.</p>
 									<div class="table-wrapper">
 										<table>
 											<thead>
