--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="program.html">Program</a></li>
 								<li><a href="call-for-papers.html">Call for papers</a></li>
+								<li><a href="proceedings.html">Proceedings</a></li>
 								<li><a href="past-events.html">Past events</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -46,6 +47,7 @@
 							<h2>5th Workshop on </br>
 								Long-term Human Motion Prediction</h2>
 							<p>2023 IEEE International Conference on Robotics and Automation (<a href="https://www.icra2023.org">ICRA 2023</a>) </br>
+							9:00 - 17:00 South Gallery Room 19</br>
 							29 May 2023, London, UK</p>
 						</div>
 					</section>
@@ -101,7 +103,8 @@
 					<section id="four" class="wrapper style3">
 						<div class="inner">
 							<h2 class="major">Highlights</h2>
-							<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring the workshop proceedings.		</p>							
+							<p>This workshop features the talks of several high-profile invited speakers of diverse academic and industrial backgrounds and a poster session featuring the workshop proceedings.		</p>	
+							<p>Participation online and in-person is possible only for the registered ICRA 2023 participants. To register, please follow the conference instructions at <a href="https://www.icra2023.org/registration">https://www.icra2023.org/registration</a></p>					
 							<section class="features">
 								<article>
 									<h3 class="major">Program</h3>
@@ -109,14 +112,14 @@
 									<a href="program.html" class="special">Learn more</a>
 								</article>
 								<article>
-									<h3 class="major">Participation</h3>
-									<p>Registration and online participation details will be announced soon.</p>
-									<a href="#" class="special">Learn more</a>
-								</article>
-								<article>
 									<h3 class="major">Call for papers</h3>
 									<p>We encourage researchers submit their novel material in short (up to 4 pages) papers to be presented as posters.</p>
 									<a href="call-for-papers.html" class="special">Learn more</a>
+								</article>
+								<article>
+									<h3 class="major">Proceedings</h3>
+									<p>The final program of the poster session includes 10 papers.</p>
+									<a href="proceedings.html" class="special">Learn more</a>
 								</article>
 								<article>
 									<h3 class="major">YouTube channel</h3>
