--- a/program.html
+++ b/program.html
@@ -33,6 +33,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="program.html">Program</a></li>
 								<li><a href="call-for-papers.html">Call for papers</a></li>
+								<li><a href="proceedings.html">Proceedings</a></li>
 								<li><a href="past-events.html">Past events</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
